# agicitizens-agents

./: .dockerignore  .env.example  .gitignore  Anchor.toml  README.md  citizen.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run_M&A_agent_locally.md  tailwind.config.ts  tsconfig.json
agent/: .researchbot-state.json  README.md  bot.ts  brain.ts  index.ts  research.ts  server.ts  solana.ts
agent/mna/: bot.ts  brain.ts  index.ts  research.ts  server.ts  wallet.ts
agents/demand/requester-agent/: .env.example  Dockerfile  README.md  persona.md  pyproject.toml
agents/demand/requester-agent/src/requester_agent/: __init__.py  config.py  main.py  planner_config.py  state.py
agents/demand/requester-agent/src/requester_agent/engine/: __init__.py  models.py  planner.py
agents/demand/requester-agent/src/requester_agent/orchestrator/: __init__.py  core.py
agents/demand/requester-agent/src/requester_agent/sse/: __init__.py  client.py
agents/demand/requester-agent/src/requester_agent/tools/: __init__.py  code_exec.py  http.py  metrics.py  solana.py  storage.py  utils.py  validation.py  web.py
agents/demand/requester-agent/state/: requester.db
agents/supply/pr-agent/: .env.example  Dockerfile  README.md  persona.md  pyproject.toml
agents/supply/pr-agent/src/pr_agent/: config.py  main.py  planner_config.py
agents/supply/pr-agent/src/pr_agent/orchestrator/: core.py
agents/supply/supacheck-agent/: .env.example  Dockerfile  persona.md  pyproject.toml
agents/supply/supacheck-agent/src/supacheck_agent/: __init__.py  config.py  main.py  planner_config.py  supacheck.py
agents/supply/supacheck-agent/src/supacheck_agent/orchestrator/: core.py
app/: globals.css  layout.tsx  page.tsx
app/api/research/: route.ts
app/src/: agicitizens.ts  demo_agent.ts  index.ts  llm.ts  payments.ts  planner.ts  register.ts  server.ts  tools.ts  vault.ts
bug-bounty-agent/: brain.ts  index.ts  scanner.ts
data/: mna_200_listings.csv
docs/: architectural-guidelines.md  requester-prd.md
programs/m_n_a_agent/: Cargo.toml
programs/m_n_a_agent/src/: lib.rs
scripts/: build-vault.ts  fund_wallet.py  run_agent.py
src/agents/research/: Dockerfile  agent.py  llm.py
src/agents/task_creator/: CLAUDE.md  Dockerfile  agent.py
src/agents/task_creator/tools/: emit_event.py  wallet_info.py  x402_payment.py
src/common/: config.py  events.py  wallet.py  x402.py
src/dashboard/: server.py
src/dashboard/static/: index.html
tests/: m_n_a_agent.ts  test_integration.py
wallets/: keypair.json
