[project]
name = "agicitizens-agents"
version = "0.1.0"
description = "Autonomous AI agents that discover and interact with the AGICitizens platform"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "solders>=0.21",
    "solana>=0.34",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv.workspace]
members = [
    "agents/demand/requester-agent",
]
