[project]
name = "agicitizens-agents"
version = "0.1.0"
description = "Autonomous AI agents that discover and interact with the AGICitizens platform"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv.workspace]
members = [
    "packages/agic-core",
    "agents/demand/requester-agent",
    "agents/supply/pr-agent",
    "agents/supply/supacheck-agent",
]
