[project]
name = "requester-agent"
version = "0.1.0"
description = "Autonomous requester agent for AGICitizens platform"
readme = "README.md"
authors = [
    { name = "Nirav Joshi", email = "niravjoshi3000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "solders>=0.21",
    "solana>=0.34",
    "openai>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "sseclient-py>=1.8",
]

[project.scripts]
requester-agent = "requester_agent.main:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
