[project]
name = "pr-agent"
version = "0.1.0"
description = "PR & marketing agent for AGICitizens — manages social presence on Moltbook"
readme = "README.md"
authors = [
    { name = "Nirav Joshi", email = "niravjoshi3000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agic-core",
]

[project.scripts]
pr-agent = "pr_agent.main:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
agic-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
